code smells and more coverage